--- a/bib4450.bib
+++ b/bib4450.bib
@@ -204,3 +204,61 @@ journal = {American Journal of Epidemiology}
  }
 
 
+@book{rice07,
+  title={Mathematical statistics and data analysis},
+  author={Rice, John A},
+  volume={371},
+  year={2007},
+  edition={3},
+  publisher={Thomson/Brooks/Cole Belmont, CA}
+}
+
+@article{rahimtoola04,
+  author = {Shahbudin H. Rahimtoola },
+  title = {Digitalis Therapy for Patients in Clinical Heart Failure},
+  journal = {Circulation},
+  volume = {109},
+  number = {24},
+  pages = {2942-2946},
+  year = {2004},
+  xdoi = {10.1161/01.CIR.0000132477.32438.03},
+  xURL = {https://www.ahajournals.org/doi/abs/10.1161/01.CIR.0000132477.32438.03},
+  xeprint = {https://www.ahajournals.org/doi/pdf/10.1161/01.CIR.0000132477.32438.03}
+}
+
+@article{beller71,
+  title={Digitalis intoxication: a prospective clinical study with serum level correlations},
+  author={Beller, George A and Smith, Thomas W and Abelmann, Walter H and Haber, Edgar and Hood Jr, William B},
+  journal={New England Journal of Medicine},
+  volume={284},
+  number={18},
+  pages={989--997},
+  year={1971},
+  publisher={Mass Medical Soc}
+}
+
+@book{glass13,
+  title={Social mobility in Britain},
+  author={Glass, David Victor},
+  year={2013},
+  publisher={Routledge}
+}
+
+@article{eddy82,
+  title={Probabilistic reasoning in clinical medicine: Problems and opportunities},
+  author={Eddy, D.},
+  journal={Judgment under uncertainty: Heuristics and biases},
+  pages={249--267},
+  year={1982}
+}
+
+@article{gastwirth87,
+  title={The statistical precision of medical screening procedures: application to polygraph and AIDS antibodies test data},
+  author={Gastwirth, Joseph L},
+  journal={Statistical Science},
+  volume={2},
+  number={3},
+  pages={213--222},
+  year={1987},
+  publisher={Institute of Mathematical Statistics}
+}
