--- a/01/main.tex
+++ b/01/main.tex
@@ -49,7 +49,7 @@ Chapter \CHAPTER: Probability}
   \begin{itemize}
   \item This course is the first part of a two semester introductory course on Mathematical Statistics.
   \item Our goal is to cover Chapters 1-10 of ``Mathematical Statistics and Data Analysis", by John A. Rice.
-  \item Topics include: Probability, Random Variables, Discrete and Continuous distributions, Order Statistics, Limit Theorems, Point and Interval Estimation, Uniformly most powerful tests, likelihood ratio tests, chi-squre and F tests, and nonparameteric tests.
+  \item Topics include: Probability, Random Variables, Discrete and Continuous distributions, Order Statistics, Limit Theorems, Point and Interval Estimation, Uniformly most powerful tests, likelihood ratio tests, chi-square and F tests, and nonparameteric tests.
   \item Roughly speaking, 4450 and 4451 can be broken into two parts: 
   \begin{itemize}
     \item Math 4450: Probability (mathematics of randomness)
