Updated slides 2, got part way through section 2.2.1

--- a/bib4450.bib
+++ b/bib4450.bib
@@ -262,3 +262,19 @@ journal = {American Journal of Epidemiology}
   year={1987},
   publisher={Institute of Mathematical Statistics}
 }
+
+@misc{wiki:poisson,
+   author = {{Wikipedia contributors}},
+   title = {Poisson distribution},
+   year = {2025},
+   url = {https://en.wikipedia.org/wiki/Poisson\_distribution},
+   note = {Accessed 14 August 2025}
+ }
+ 
+@misc{wiki:edf,
+    author = "{Wikipedia contributors}",
+    title = "Empirical distribution function --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2025",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Empirical_distribution_function&oldid=1300940691}",
+    note = "[Online; accessed 14-August-2025]"
+  }
