--- a/02/main.Rnw
+++ b/02/main.Rnw
@@ -105,26 +105,26 @@ Chapter \CHAPTER: Probability}
   
   More generally, let's assume that $X$ is a discrete RV, and denote the possible values as $x_1, x_2, \ldots$.
   There exists a function $p$ such that $p(x_i) = P(X = x_i)$ that satisfies $\sum_i p(x_i) = 1$.
-  This function $p$ is called the \alert{probability mass function} (PMF) of the random variable $X$. 
+  This function $p$ is called the \alert{probability mass function} (pmf) of the random variable $X$. 
   
-  We may also be interested in calculating for all values $x \in \R$, the probability $F(x) = P(X \leq x)$; the function $F$ is called the \alert{cumulative distribution function} (CDF).
-  The CDF plays a number of important roles in probability and statistics that we will see later on.
+  We may also be interested in calculating for all values $x \in \R$, the probability $F(x) = P(X \leq x)$; the function $F$ is called the \alert{cumulative distribution function} (cdf).
+  The cdf plays a number of important roles in probability and statistics that we will see later on.
   
   \framebreak
   
   Some notes: 
   
   \begin{itemize}
-    \item The CDF is non-decreasing (see Theorem 1.2), and
+    \item The cdf is non-decreasing (see Theorem 1.2), and
     $$
     \lim_{x \rightarrow -\infty} F(x) = 0 \quad \text{and} \quad \lim_{x \rightarrow \infty} F(x) = 1.
     $$
-    \item The PMF and CDF are connected: the CDF ``jumps" at all values that the pdf $p(x) > 0$.
-    \item Conventionally, the PMF is usually denoted with lower-case letters (e.g., $p$, $f$), whereas the CDF is usually denoted with upper-case letters (e.g., $F$). 
+    \item The pmf and cdf are connected: the cdf ``jumps" at all values that the pdf $p(x) > 0$.
+    \item Conventionally, the pmf is usually denoted with lower-case letters (e.g., $p$, $f$), whereas the cdf is usually denoted with upper-case letters (e.g., $F$). 
   \end{itemize}
   
   \mode<article>{
-    See Figures 2.1 and 2.2 of \citet{rice07} for a depiction of the PMF and CDF of the 3-coin example.
+    See Figures 2.1 and 2.2 of \citet{rice07} for a depiction of the pmf and cdf of the 3-coin example.
   }
   
 \end{frame}
@@ -147,14 +147,14 @@ Chapter \CHAPTER: Probability}
 
 \begin{frame}{Bernoulli Random Variables}
   A Bernoulli RV only takes on two values\footnote{Sometimes you'll see the random variable take values $-1$ and $1$.}, $0$ and $1$, with probabilities $1-p$ and $p$, respectively.
-  The PMF is therefore
+  The pmf is therefore
   \begin{align*}
     p(1) &= p \\
     p(0) &= 1-p \\
     p(x) &= 0, \quad \text{if } x \neq 0 \text{ and } x\neq 1.
   \end{align*}
   
-  By using the output of $0$ and $1$, the PMF is usually written in a more compact form:
+  By using the output of $0$ and $1$, the pmf is usually written in a more compact form:
   $$
   p(x) = \begin{cases} 
     p^x(1 - p)^x, & \text{if } x = 0\, \text{ or } x = 1,\\
@@ -176,8 +176,502 @@ Chapter \CHAPTER: Probability}
   Here, we see that $P(I_A = 1) = P(A)$. 
 \end{frame}
 
-\begin{frame}{Junk Citation}
-  \citet{rice07}
+\subsection{Binomail Distribution}
+
+\begin{frame}[allowframebreaks]{Binomial Distribution}
+  Using what we know about independent RVs and Bernoulli RVs, we can derive the pmf for a Binomial distribution.
+  
+  Suppose that we have $n$ independent experiments, where $n$ is a fixed (positive) integer.
+  Let each experiment have two outcomes with probabilities $p$ and $1-p$, respectively, which we call ``success" or ``failure".
+  We are interested now in the random variable $X$, the number of ``successes" in $n$ independent trials.
+  
+  \emph{Question:} What is the probability that $X = k$, for some $k \in \{0, 1, 2, \ldots\}$?
+  
+  \framebreak
+  
+  \emph{Solution Sketch}: 
+  
+  \mode<article>{
+  
+    \vspace{2mm}
+  
+    For $X = k$, we must have \emph{exactly} $k$ successes and $n-k$ failures. By the multiplication law, any one such sequence has probability $p^k(1 - p)^{n-k}$ (for instance suppose $n = 3$. What is the probability of the event $SFS$? it's $p \times (1-p) \times p = p^2(1-p)^{3-2}$.)
+    
+    Because we only care about the \emph{number} of successes, not the order, we now have a counting problem: with $n$ total trials (positions), how many ways can we arrange the $k$ successes? Another way of thinking is: ``How many ways can we choose $k$ out of $n$ locations in a sequence to place the successes?".
+    The answer is $\binom{n}{k}$, so in total, the probability that $X = k$ is: 
+    $$
+    p(k) = P(X = k) = \binom{n}{k}p^k(1- p)^{n-k}.
+    $$
+    
+    The function $p$ above is the pmf for the binomial distribution.
+  }
+  
+  \framebreak
+  
+  \begin{exampleblock}{Flipping Coins}
+    Suppose that a coin is flipped $10$ times. What is the probability that the coin lands heads heads exactly $6$ times? 
+    
+    Here, $n = 10$, and success$ = $ Heads. Assuming the coin is fair, we have
+    $$
+    P(\text{Num Heads} = 6) = \binom{10}{6}(0.5)^6(0.5)^4 \approx 210 \times 0.00098 \approx .205
+    $$
+  \end{exampleblock}
+  
+  \begin{exampleblock}{Rolling Dice}
+    Suppose a five 6-sided (fair) dice are rolled simultaneously. What is the probability that at least two of the dice show the value 6?
+    
+    Let $X$ denote the number of 6s in this experiment, which takes values in the set $\{0, 1, \ldots 5\}$.
+    We want the probability that $X \geq 2$. 
+    Because the different values of $X$ are mutually exclusive events (i.e., $X=2$ implies $X \neq 3$), we can calculate this as:
+    $$
+    P(X \geq 2) = \sum_{i \in \{2, 3, 4, 5\}} p(i) \approx \Sexpr{1 - dbinom(0, 5, 1/6) - dbinom(1, 5, 1/6)},
+    $$
+    where $p(i)$ is the pmf of the binomial$(5, 1/6)$ distribution. 
+    Alternatively, we can use the complement set, which is smaller:
+    $$
+    P(X \geq 2) = 1 - P(X < 2) = 1 - \big(p(0) + p(1)\big) \approx \Sexpr{1 - dbinom(0, 5, 1/6) - dbinom(1, 5, 1/6)}
+    $$
+  \end{exampleblock}
+  
+  \framebreak
+  
+  \emph{Note:} A binomial RV can be expressed as the sum of independent Bernoulli RVs. That is, let $X_1, X_2, \ldots, X_n$ be independent Bernoulli RVs, each with $P(X_i = 1) = p$. Then,
+  $Y = X_1 + X_2 + \ldots + X_n$ is a Binomial RV, with parameters $(n, p)$.
+  
+\end{frame}
+  
+\subsection{Geometric and Negative Binomial Distributions}
+
+\begin{frame}[allowframebreaks]{Geometric Distribution}
+  
+  We can construct a \alert{geometric} RV in a similar way that we did with the binomial distribution.
+  Suppose instead of having a fixed number of trials, we continue having a trial until our first success. That means that if $X = k$, we will have $k-1$ failures, one success, and then stop.
+  Thus, the pmf can easily be constructed to be: 
+  $$
+  p(k) = P(X = k) = (1-p)^{k-1}p, \quad k = 1, 2, 3, \ldots
+  $$
+  
+  \framebreak
+  
+  \begin{block}{Geometric Series}
+    Recall from calculus the geometric series:
+    $$
+    \sum_{i = 0}^\infty r^i = \frac{1}{1 - r}, \quad \text{if } 0 < r < 1.
+    $$
+    This identity occurs in the pmf of the geometric series. Let $0 < p < 1$, then
+    $$
+    \sum_{k = 1}^\infty (1 - p)^{k-1}p = p\sum_{j = 0}^\infty (1-p)^j = p\frac{1}{1 - (1-p)} = 1.
+    $$
+  \end{block}
+  
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Negative Binomial Distribution}
+  The \alert{negative binomial} (NB) distribution can be thought of as a generalization of the geometric distribution; rather than stopping when we have exactly one success, we now will stop when we have $r$ successes.
+  
+  For any particular sequence of trials of length $k$ that satisfy this condition, the probability is $p^r(1 - p)^{k - r}$.
+  Now, the last trial must be a success (because we stopped), so we need to choose the location of the remaining $r - 1$ successes. Thus, if $X$ has a negative binomial distribution, the pmf is:
+  $$
+  p(k) = P(X = k) = \binom{k-1}{r - 1}p^r(1-p)^{k-r}.
+  $$
+  
+  \framebreak
+  
+  Another way that can be helpful for thinking about the NB-distribution is considering it as the sum of $r$ independent geometric random variables: 
+  
+  we want to represent the total number of trials until the $r$th success, which is the sum of the number of trials until (and including) the first success, plus the number of trials from the first success until (and including) the second success, and continued until we get $r$ successes.
+  
+  \begin{exampleblock}{Negative Binomial Lottery}
+    Suppose that there is a type of lottery where each purchased ticket has equal probability of winning $(p = 1/100)$, and there are 3 total prizes to be won. 
+    What is the probability that exactly $k$ tickets will be sold until all prizes have been won? 
+    $$
+    P(X = k) = \binom{k-1}{3 - 1}(0.01)^3(0.99)^{k-3}.
+    $$
+    
+  \end{exampleblock}
+  
+\end{frame}
+
+\subsection{Hypergeometric and Poisson Distribution}
+
+\begin{frame}[allowframebreaks]{The Hypergeometric Distribution}
+
+Suppose that there is a total population of size $n$, and $r$ have some trait of interest (``success"), and $n-r$ do not (``failure").
+If we sample $m$ items from the population, then the total number of ``successes" in our sample of size $m$ follows a hypergeometric distribution:
+$$
+P(X = k) = \frac{\binom{r}{k}\binom{n-r}{m-k}}{\binom{n}{m}}.
+$$
+
+\framebreak
+
+Combinatorially, for $X = k$, we must select $k$ successes out of the total possible $r$ successes in the entire population; there are $\binom{r}{k}$ ways to do this.
+
+Since we selected $m$ objects in our sample, and we want $m-k$ of them to be failures, we must pick $m-k$ failures from the $n-r$ failures in the population; there are $\binom{n-r}{m-k}$ ways to do this.
+
+Together, the multiplication principle implies there are $\binom{r}{k}\binom{n-r}{m-k}$ ways that a sample of size $m$ contains $k$ successes from described population.
+
+\mode<presentation>{
+  Finally, there are a total of $\binom{n}{m}$ ways we can pick our sample.
+}
+
+\mode<article>{
+Finally, there are a total of $\binom{n}{m}$ ways we can pick our sample:
+
+$$
+P(X = k) = \frac{\binom{r}{k}\binom{n-r}{m-k}}{\binom{n}{m}}.
+$$
+}
+
+\begin{exampleblock}{Balls in a basket}
+  Suppose that there are $n$ balls in a basket, and $r$ balls are black, $n-r$ balls are some other color. If we select $1 \leq m < n$ balls randomly (without replacement), let $X$ denote the number of black balls in our sample of size $m$. Then, for all $0 \leq k \leq r$,
+  $$
+  P(X = k) = \frac{\binom{r}{k}\binom{n-r}{m-k}}{\binom{n}{m}}.
+  $$
+\end{exampleblock}
+
+\end{frame}
+
+\begin{frame}[allowframebreaks]{The Poisson Distribution}
+
+  The Poisson distribution is used very frequently in both theory and practice, though the derivation is less intuitive than other distributions, so we will first just provide the pmf:
+  
+  \begin{block}{Definition: Poisson Distribution}
+    The pmf of a random variable $X$ that follows a Poisson distribution with parameter $\lambda > 0$ is
+    $$
+    p(k) = P(X = k) = \frac{\lambda^k}{k!}e^{-\lambda}, \quad k = 0, 1, 2, \ldots
+    $$
+  \end{block}
+  
+  \framebreak
+  
+  Recall from calculus that $e^x = \sum_{n = 0}^\infty \frac{x^n}{n!}$. Thus, like all pmf's, the pmf of a Poisson distributed RV sums to one: 
+  
+  \begin{align*}
+    \sum_{k = 0}^\infty p(k) &= \sum_{k = 0} \frac{\lambda^k}{k!}e^{-\lambda} \\
+    &= e^{-\lambda}\sum_{k = 0} \frac{\lambda^k}{k!} \\
+    &= e^{-\lambda}e^\lambda = 1.
+  \end{align*}
+  
+  \framebreak
+  
+  The value of $\lambda$ controls the \emph{shape} of the distribution:
+  
+  \begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.55\textwidth]{poisson.png}
+  \caption{\label{fig:poisson}Shape of the Poisson distribution for various values of $\lambda$ \citep{wiki:poisson}.}
+  \end{figure}
+ 
+\framebreak
+
+The Poisson distribution can be derived as the limit of a binomial distribution as the number of trials $n \rightarrow \infty$, and $p\rightarrow 0$, such that $np = \lambda$.
+
+\mode<presentation>{
+  See next slide.
+}
+
+\framebreak
+
+\emph{Derivation:} 
+
+\mode<article>{
+
+\vspace{2mm}
+
+Recall the pmf of the binomal distribution can be expressed as
+$$
+p(k) = \frac{n!}{k!(n - k)!}p^k(1- p)^{n-k}.
+$$
+Setting $np = \lambda$, the expression becomes:
+\begin{align*}
+  p(k) &= \frac{n!}{k!(n - k)!} \Big(\frac{\lambda}{n}\Big)^k \Big(1 - \frac{\lambda}{n}\Big)^{n-k} \\
+  &= \frac{\lambda^k}{k!}\frac{n!}{(n-k)!}\frac{1}{n^k}\Big(1 - \frac{\lambda}{n}\Big)^n\Big(1 - \frac{\lambda}{n}\Big)^{-k}
+\end{align*}
+
+Now taking the limit $n \rightarrow \infty$,
+\begin{align*}
+  \frac{\lambda}{n} &\rightarrow 0 \\
+  \frac{n!}{(n-k)!n^k} &\rightarrow 1 \\
+  \Big(1 - \frac{\lambda}{n}\Big)^n &\rightarrow e^{-\lambda} \\
+  \Big(1 - \frac{\lambda}{n}\Big)^{-k} &\rightarrow 1
+\end{align*}
+
+And therefore
+$$
+p(k)\rightarrow \frac{\lambda^ke^{-\lambda}}{k!}.
+$$
+}
+
+\framebreak
+
+\mode<presentation>{
+\emph{Derivation (continued):} 
+}
+
+\framebreak
+
+This derivation suggests how a Poisson distribution can arise in practice.
+
+\begin{itemize}
+  \item Let $X$ denote the random variable representing the number of times some event occurs in a fixed time interval.
+  \item Think of dividing the interval into very large number of small sub-intervals of equal length.
+  \item Assume that the sub-intervals are so small that the probability of more than one event in a sub-interval is negligible relative to the probability of one event (which itself is small).
+  \item Finally, assume that the probability of an event in a given sub-interval is identical and independent of that of other sub-intervals.
+\end{itemize}
+
+\framebreak
+
+Following this, X is nearly binomially distributed, with $n$ being the number of sub-intervals, and $p = \lambda / n$ the probability of the event in each sub-interval.
+Taking the limit, we get something that is nearly Poisson distributed.
+
+\begin{itemize}
+
+\item This idea can actually be formalized and made rigorous; you would probably see something like this in a course on stochastic processes.
+
+\item The Poisson distribution is often used to model the number of events that occur in a fixed interval.
+\end{itemize}
+
+\framebreak
+
+The Poisson distribution is often good model for the number of events in a fixed time interval if the following conditions are met:
+\begin{itemize}
+  \item The occurrence of one event does not affect the occurrence of another.
+  \item The rate at which events occur is fixed.
+  \item Two events cannot occur at the exact same instant.
+\end{itemize}
+
+In this scenario, the random (stochastic) process that generates the data is called a \alert{Poisson process}, which gives rise to the name \alert{rate} for the parameter $\lambda$.
+
+\framebreak
+
+\begin{exampleblock}{Example: Telephone calls}
+  Suppose that an office receives telephone calls as a Poisson process with $\lambda = 0.5$ calls per minute.
+  The number of calls in a 5-min. interval follows a Poisson distribution with parameter $5\lambda = 2.5$. Thus, the probability of no calls in a 5-min. interval is $p(0) = e^{-2.5} \approx .082$; the probability one one call is $p(1) = 2.5 e^{-2.5} \approx .205$
+\end{exampleblock}
+
+\end{frame}
+
+\section{Continuous Random Variables}
+
+\begin{frame}{Introduction}
+  Because discrete RVs take only a finite number of possibilities, they are relatively simple to define.
+  
+  In many situations, however, we are interested in random variables that can take on a continuum of values rather than a finite (or countably infinite) number.
+  
+  \begin{exampleblock}{Example: Lifetime of electronic}
+    We might be interested in the lifetime of an electronic component; the total lifetime may be random, but may take on any positive real number.
+  \end{exampleblock}
+  
+\end{frame}
+
+\begin{frame}{Density function}
+  For continuous random variables, we no longer have a pmf (which maps all values of the random variable to their corresponding probabilities).
+  Instead, the role of the pmf is taken by a \alert{probability density function} (pdf), which we will denote $f(x)$.
+  
+  \begin{block}{Basic properties of a pdf}
+    If $f(x)$ is a pdf, then $f(x) \geq 0$ for all $x$, $f$ is piece-wise continuous, and $\int_{-\infty}^{\infty} f(x) dx = 1$.
+  \end{block}
+  
+\end{frame}
+
+\begin{frame}{Probabilities}
+  If $X$ is a random variable with a density function $f$, then for any $a \leq b$, the probability that $X$ falls in the interval $(a, b)$ (with the treatment that if $a = b$, the interval collapses to the set $\{a\}$) is given by: 
+  $$
+  P(a < X < b) = \int_{a}^b f(x) dx.
+  $$
+  An immediate consequence of this definition is that $P(X = a) = 0$ for any $a \in \R$.
+  
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Example: Continuous uniform random variable}
+  By \emph{uniform}, we mean that all outcomes in the given set are equally as likely.
+  For example, if $X$ is a RV with uniform distribution on the interval $[0, 1]$, then any real number in this interval is equally likely, and the probability that $X$ is in a sub-interval of length $h$ should be equal to $h$. 
+  
+You can verify that the following density satisfies this condition: 
+
+$$
+f(x) = \begin{cases}
+1, & 0 \leq x \leq 1\\
+0 & x < 0 \text{ or } x > 1.
+\end{cases}
+$$
+
+\mode<article>{
+
+For instance, we can pick some $c \in [0, 1]$, and $h \in (0, 1-c)$. Then the probability that $X \in (c, c+h)$ is given by:
+
+$$
+P(c < X < c+h) = \int_{c}^{c+h}1_{0 \leq x \leq 1}dx = \int_c^{c+h}1dx = (c + h) - c = h.
+$$
+
+}
+
+\framebreak
+
+The previous density can be generalized to any interval $[a, b]$, such that $a < b$.
+
+\begin{block}{Continuous uniform density}
+  If $X$ is a RV uniformly distributed on an interval $[a, b]$, where $a < b$, then the corresponding density function is: 
+  $$
+  f(x) = \begin{cases}
+  1 / (b - a) & a \leq x \leq b\\
+  0 & x < a \text{ or } x > b.
+  \end{cases}
+  $$
+\end{block}
+
+\framebreak
+
+One important thing to note is that if $X$ is a continuous RV, then
+$$
+P(a < X < b) = P(a \leq X < b) = P(a < X \leq b).
+$$
+This is because the probability $X$ being any particular value is zero; if this were not the case, then the probability of the entire set would infinite (and probabilities must sum to one).
+
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Cumulative distribution function}
+
+  The cumulative distribution function of a continuous random variable $X$ is defined in the same way as for a discrete random variable:
+  
+  $$
+  F(x) = P(X \leq x) = \int_{-\infty}^x f(x) dx.
+  $$
+  
+  Thus, we can connect the cdf and the pdf of a continuous random variable using the fundamental theorem of calculus.
+  Specifically, if $f(x)$ is continuous at $x$, then $F'(x)$, and
+  $$
+  P(a \leq X \leq b) = \int_{a}^{b} f(x)dx = F(b) - F(a).
+  $$
+  
+  \framebreak
+  
+  This derivation gives some hints at properties of the cdf (both continuous and discrete RVs). Let $F$ be a distribution function. Then the following properties hold: 
+  \begin{itemize}
+    \item $F$ is right-continuous.
+    \item $F$ is monotonically increasing (non-decreasing).
+    \item $F: \R \rightarrow [0, 1]$ and satisfies $\lim_{x \rightarrow -\infty} F(x) = 0$, and $\lim_{x \rightarrow \infty}$ F(x) = 1.
+  \end{itemize}
+  
+  Note: every probability distribution supported on the real numbers is uniquely identified by its distribution function $F$ (more to come).
+  
+  \framebreak
+  
+  \begin{exampleblock}{cdf of continuous uniform density}
+    From the definition, we can calculate the cdf of the continuous uniform density rather easily. Suppose that $X$ is uniformly distributed on $[0, 1]$. Then the cdf $F$ is:
+    \begin{align*}
+    F(X \leq x) &= \int_{-\infty}^x f(x)dx \\
+    &= \int_{-\infty}^x 1[0 \leq x \leq 1]dx \\
+    &= \begin{cases}
+      0 & x < 0 \\
+      x & 0 \leq x \leq 1 \\
+      1 & x > 1.
+    \end{cases}
+    \end{align*}
+  \end{exampleblock}
+  
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Percentiles}
+  You're probably familiar with the term \alert{median}.
+  For any given sample, the median defines the ``mid-point", meaning that half of the values are larger, half are smaller.
+  
+  This same concept applies to distribution functions.
+  That is, the median of a distribution $F$ is defined to be that value $x_{.5}$ such that $P(X < x_{.5}) = 0.5$.
+  Formally, the sample median is the same as the definition above, using the \emph{empirical} distribution function \citep{wiki:edf}.
+  
+  It is important to note that, as defined, the median value may not be unique!
+
+  \framebreak
+  
+  \begin{block}{Definition: Percentile}
+    Let $F$ be the cdf of a continuous random variable. The $p$th quantile of the distribution $F$ is defined to be any value $x_p$ such that $F(x_p) = P(X \leq x_p) = p$. If $F$ is strictly increasing, then $x_p$ is unique and we say that $F^{-1}(p) = x_p$.
+    
+    If $F$ is not strictly increasing, then $x_p$ may not be unique; in this case, all such values are considered percentiles.
+    If an inverse function is needed in this case, we will define $F^{-1}(p) = \inf \{x \in \R: F(x) \geq p\}$.
+  \end{block}
+  
+  The last bit of the definition is just some important book keeping to ensure the inverse function exists in odd examples, though I don't think it comes up in this course.
+  
+  \framebreak
+  
+  Some important percentiles have their own names, including: 
+  \begin{itemize}
+    \item Median: $p = 1/2$.
+    \item Quartiles (lower and upper): $p = 1/4$, and $p = 3/4$, resp.
+    \item Min: $p = 0$.
+    \item Max: $p = 1$.
+  \end{itemize}
+  
+  Note that the inverse cdf is sometimes called the \alert{quantile function}.
+  
+  \framebreak
+  
+  \begin{exampleblock}{Calculating the inverse cdf}
+    Suppose that 
+    $$
+    F(x) = \begin{cases} 0 & x < 0 \\ x^2 & 0 < x < 1 \\ 1 & x > 1 \end{cases}
+    $$ 
+    for $0 \leq x \leq 1$. Find the inverse distribution function $F^{-1}$.
+  \end{exampleblock}
+  
+  \emph{Solution:}
+  
+  \mode<article>{
+  \vspace{2mm}
+  First, let's check that this is a valid distribution function. First, $\lim_{x \rightarrow -\infty}F(x) = 0$, and $\lim_{x \rightarrow \infty} F(x) = 1$.
+ 
+  \vspace{2mm}
+  Now we note that it is trivially monotonically increasing from $(-\infty, 0)$ and $[1, \infty)$. Now on $[0, 1)$, $x^2$ is also increasing, and hence we have $F(x)$ is a monotonically increasing function. 
+  
+  \vspace{2mm}
+  Finally, we need to check that it is right-continuous. In this case it is trivial, because the only points of potential discontinuity are $x = 0$ and $x = 1$, but the limit clearly exists and equals the function value at both of these points. 
+  
+  \vspace{2mm}
+  Now to find the inverse function, we will focus on the more interesting part of the function, and solve $y = F(x) = x^2$ for $x$, obtaining $x = F^{-1}(y) = \sqrt{y}$. This provides the inverse function for all points in $(0, 1)$, but what about the endpoints? These are not unique, so we take:
+  $$
+  F^{-1}(0) = \inf \{x \in \R: F(x) \geq 0\} = \inf_x [0, \infty) = 0,
+  $$
+  and 
+  $$
+  F^{-1}(1) = \inf \{x \in \R: F(x) \geq 1\} = \inf_x [1, \infty) = 1.
+  $$
+  Fortunately, these points already match what we found in the mid-point with the square-root function: $\sqrt{0}=0$ and $\sqrt{1}=1$ (you could have guessed this would happen since the function is always continuous), so we get
+  $$
+  F^{-1}(p) = \sqrt{p}.
+  $$
+  Thus, the inverse function defined on the interval $[0, 1]$ is
+  }
+  
+  
+\end{frame}
+
+\subsection{Example Distributions}
+
+\begin{frame}[allowframebreaks]{Exponential Distribution}
+  The exponential density function is:
+  $$
+  f(x) = \begin{cases}
+    \lambda e^{-\lambda x} & x \geq 0 \\
+    0 & x < 0
+  \end{cases}
+  $$
+  Like the Poisson distribution, the exponential density function depends on a single parameter $\lambda$.
+  When this is the case, we refer to it as the \alert{family} of exponential densities that is \emph{indexed} by the parameter $\lambda$. 
+  
+  \framebreak
+  
+  The cdf is easily found via the fundamental theorem of calculus: 
+  $$
+  F(x) = \int_{-\infty}^x f(u)du = \begin{cases}
+    1 - e^{-\lambda x} & x \geq 0 \\
+    0 & x < 0
+  \end{cases}
+  $$
+  From this, we can easily find quantiles of the distribution, such as the median: by solving $F(x_{.5}) = 1/2$
+  $$
+  1 - e^{-\lambda x_{.5}} = \frac{1}{2} \quad \implies \quad x_{.5} = \frac{\log 2}{\lambda}.
+  $$
 \end{frame}
 
 \newcommand\acknowledgments{
